--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.6
+  image_picker: ^0.8.7+4
   shared_preferences: ^2.2.2
   flutter_map: ^4.0.0
   latlong2: ^0.8.1
